[package]
name = "tcplane"
version = "3.23.1"
edition = "2024"
authors = ["ltpp-universe <root@ltpp.vip>"] 
license = "MIT"
description = """tcplane is a lightweight and high-performance Rust TCP server library designed to simplify network service development. It supports TCP communication, data stream management, and connection handling, focusing on providing efficient low-level network connections and data transmission capabilities, making it ideal for building modern network services."""
keywords = ["http", "request", "response", "tcp", "redirect"]
repository = "https://github.com/ltpp-universe/tcplane.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github",
    "logs",
    "**/*.log"
]

[dependencies]
future-fn = "0.1.0"
clonelicious = "1.1.1"
color-output = "6.6.1"
file-operation = "0.5.9"
hyperlane-log = "1.16.2"
lombok-macros = "1.11.0"
recoverable-spawn = "3.7.2"
recoverable-thread-pool = "2.3.2"
std-macro-extensions = "0.23.0"
tokio = { version = "1.45.0", features = ["full"] }
once_cell = "1.21.3"
simd-json = "0.15.0"
serde = "1.0.219"
serde_json = "1.0.140"
futures = "0.3.31"
server-manager = "3.2.1"

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
