[package]
name = "tcplane"
version = "4.0.1"
edition = "2024"
authors = ["root@ltpp.vip"] 
license = "MIT"
description = """tcplane is a lightweight and high-performance Rust TCP server library designed to simplify network service development. It supports TCP communication, data stream management, and connection handling, focusing on providing efficient low-level network connections and data transmission capabilities, making it ideal for building modern network services."""
keywords = ["http", "request", "response", "tcp", "redirect"]
repository = "https://github.com/eastspire/tcplane.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github",
    "logs",
    "**/*.log"
]

[dependencies]
lombok-macros = "1.11.4"
tokio = { version = "1.45.1", features = ["full"] }

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
